--- a/Kpi-Reporting-App/css/styles.css
+++ b/Kpi-Reporting-App/css/styles.css
@@ -164,12 +164,22 @@ button.no-symbol:hover {
     font-size: 1rem;
 }
 
+.project-name-body {
+    text-align: left;
+    width: 15%;
+}
+
+.title-body {
+    text-align: left;
+    width: 35%;
+}
+
 .project-name {
     width: 15%;
 }
 
 .title {
-    width: 20%;
+    width: 35%;
 }
 
 .username {
