--- a/Kpi-Reporting-App/templates/projectMap.html
+++ b/Kpi-Reporting-App/templates/projectMap.html
@@ -9,7 +9,7 @@
         <header class="data-header">
             <ul>
                 <li class="expand-button-header">&#10133;</li>
-                <li class="project-name"><p>Project Name</p></li>
+                <!--<li class="project-name"><p>Project Name</p></li>-->
                 <li class="title"><p>Test Case Title</p></li>
                 <li class="datetime"><p>Date</p></li>
                 <li class="username"><p>User</p></li>
@@ -19,8 +19,8 @@
         <section class="test-cases" ng-repeat="testCase in mapData.testCases">
             <ul>
                 <li class="expand-button-section" expand-test-case-buttons></li>
-                <li class="project-name"><p>{{data.project.name}}</p></li>
-                <li class="title"><p>{{testCase.testCaseTitle}}</p></li>
+                <!--<li class="project-name-body"><p>{{data.project.name}}</p></li>-->
+                <li class="title-body"><p>{{testCase.testCaseTitle}}</p></li>
                 <li class="datetime" date-change></li>
                 <li class="username" user-change></li>
                 <li class="status" ng-class="testCase.isFinal == 1 ? 'final' : 'non-final'" status-change></li>
