Implemented users load and user load by days page.

--- a/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/directives/projectMenu.html
+++ b/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/directives/projectMenu.html
@@ -2,6 +2,6 @@
     <li class="project-menu-list-item"><a ng-href="#/projects/{{data.project.id}}/statistics">statistics</a></li>
     <li class="project-menu-list-item"><a ng-href="#/projects/{{data.project.id}}/allocationMap">allocation map</a></li>
     <li class="project-menu-list-item"><a ng-href="#/projects/{{data.project.id}}/daysAllocation">days allocation</a></li>
-    <li class="project-menu-list-item"><a ng-href="#/users/load">users load</a></li>
+    <li ng-if="authentication.isAdmin()" class="project-menu-list-item"><a ng-href="#/users/load">users load</a></li>
     <li class="project-menu-list-item"><a ng-href="#/projects/{{data.project.id}}/setup">setup</a></li>
 </ul>
