--- a/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/directives/userHeader.html
+++ b/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/directives/userHeader.html
@@ -1,5 +1,5 @@
 <nav class="user-menu">
-    <span class="user-menu-greeting">Hello, {{user.username}}</span>
+    <span class="user-menu-greeting">Hello, {{data.user.displayName}}</span>
 
     <form class="user-menu-logout-form">
         <button class="user-menu-logout-button" ng-click="logout()">Logout</button>
