--- a/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/userLoad.html
+++ b/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/userLoad.html
@@ -4,11 +4,55 @@
     </header>
 
     <div ng-repeat="day in userData.days">
-        <span>{{day.dayDate}}</span>
-        <span>Allocated: {{day.allocated}}</span>
-        <span>Expected: {{day.expected}}</span>
-        <span><button ng-click="expandUserDay(day.dayId)">&#10133;</button></span>
-        <span style="{{userData.alerts[day.dayId]}}" ng-if="userData.alerts[day.dayId]">&#9888;</span>
+        <span ng-if="!userData.expanded[day.dayId]">
+            <button ng-click="expandUserDay(userData.info.userId, day)">+</button>
+        </span>
+        <span ng-if="userData.expanded[day.dayId]">
+            <button ng-click="hideExpanded(day.dayId)">+</button>
+        </span>
+
+        <span ng-if="day.period == 1">
+            <span>{{day.dayDate}}</span>
+            <span>Executed: {{day.executed}}</span>
+            <span>Expected: {{day.expected}}</span>
+        </span>
+        <span ng-if="day.period == 2 || day.period == 3">
+            <span ng-if="day.class == 'fontRed'">
+                <span style="color:red;">{{day.dayDate}}</span>
+                <span style="color:red;">Allocated: {{day.allocated}}</span>
+                <span style="color:red;">Expected: {{day.expected}}</span>
+            </span>
+            <span ng-if="day.class == 'fontBold'">
+                <span style="font-weight:bold;">{{day.dayDate}}</span>
+                <span style="font-weight:bold;">Allocated: {{day.allocated}}</span>
+                <span style="font-weight:bold;">Expected: {{day.expected}}</span>
+            </span>
+            <span ng-if="day.class == 'backgroundYellow'">
+                <span style="background:yellow;">{{day.dayDate}}</span>
+                <span style="background:yellow;">Allocated: {{day.allocated}}</span>
+                <span style="background:yellow;">Expected: {{day.expected}}</span>
+            </span>
+            <span ng-if="day.class == false || day.class == 'alert'">
+                <span>{{day.dayDate}}</span>
+                <span>Allocated: {{day.allocated}}</span>
+                <span>Expected: {{day.expected}}</span>
+            </span>
+        </span>
+
+        <span style="color:#FF6600;font-size:1.25em;" ng-if="day.class">&#9888;</span>
+
+        <div ng-repeat="exp in userData.expanded[day.dayId] track by $index">
+            <span style="padding-left:6%;">Day {{exp.dayIndex}}</span>
+            <span><a style="color:blue" href="#/projects/{{exp.projectId}}/daysAllocation">"{{exp.projectName}}"</a></span>
+            <span ng-if="day.period == 1">
+                <span>Executed: {{exp.executed}}</span>
+            </span>
+            <span ng-if="day.period > 1">
+                <span>Allocated: {{exp.allocated}}</span>
+            </span>
+            <span>Expected {{exp.expected}}</span>
+        </div>
+
     </div>
 
 </div>
