--- a/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/directives/userHeader.html
+++ b/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/directives/userHeader.html
@@ -1,7 +1,7 @@
 <nav class="user-menu">
     <span class="user-menu-greeting">Hello, {{data.user.displayName}}</span>
 
-    <form class="user-menu-logout-form">
-        <button class="user-menu-logout-button" ng-click="logout()">Logout</button>
-    </form>
+    <a class="user-menu-dashboard"
+       ng-if="data.project.id" href="http://helios01/uat/ooredoo_product_details.php?id={{data.project.id}}">Dashboard</a>
+    <button class="user-menu-logout-button" ng-click="logout()">Logout</button>
 </nav>
