--- a/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/daysAllocationPage/parkForm.html
+++ b/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/daysAllocationPage/parkForm.html
@@ -1,16 +1,16 @@
-<form name="parkForm">
-    <hr>
+<form class="park-form" name="parkForm">
     <h4>Execution control</h4>
     <div ng-if="data.config.isParked == 0">
         <p>Choose reason for stopping the plan execution</p>
-        <select ng-options="reason.description for reason in daysData.parkReasons track by reason.id"
+        <select class="bold bigger" ng-options="reason.description for reason in daysData.parkReasons track by reason.id"
                 ng-model="daysData.selectedParkReason" required></select>
-        <button ng-disabled="!daysData.selectedParkReason"
+        <button class="button-medium"
+                ng-disabled="!daysData.selectedParkReason"
                 ng-click="stopExecution()">Stop Execution
         </button>
     </div>
 
     <div ng-if="data.config.isParked == 1">
-        <button ng-click="resumeExecution()">Resume Execution</button>
+        <button class="button-medium" ng-click="resumeExecution()">Resume Execution</button>
     </div>
 </form>
