--- a/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/usersLoadPage/usersLoad.html
+++ b/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/usersLoadPage/usersLoad.html
@@ -4,7 +4,7 @@
     </header>
 
     <div ng-repeat="user in usersLoadData.users">
-        <span>User: <a style="color:blue;" href="#/user/{{user.userId}}/load">{{user.displayName}}</a></span>
+        <span>User: <a style="color:blue;" ng-href="#/user/{{user.userId}}/load">{{user.displayName}}</a></span>
         <span>Load: {{user.userLoadPercentage}}%</span>
         <span style="{{usersLoadData.alerts[user.userId]}}" ng-if="usersLoadData.alerts[user.userId]">&#9888;</span>
     </div>
