--- a/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/daysAllocationPage/planExtension.html
+++ b/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/daysAllocationPage/planExtension.html
@@ -1,39 +1,39 @@
-<form name="planExtensionForm" ng-if="data.config.isParked == 0">
-    <hr>
-    <p style="color:blue;">Plan extension</p>
+<form class="plan-extension-form" name="planExtensionForm" ng-if="data.config.isParked == 0">
+    <h4>Plan extension</h4>
     <div>
         <span>Choose reasons for extending the plan</span>
-        <div>
-            <select ng-options="reason.description for reason in daysData.extReasons track by reason.id"
+        <p>
+            <select class="bold bigger" ng-options="reason.description for reason in daysData.extReasons track by reason.id"
                     ng-model="daysData.selectedReason" required></select>
-            <button ng-click="addReason(daysData.selectedReason)">Add</button>
-        </div>
+            <button class="button-medium" ng-click="addReason(daysData.selectedReason)">Add</button>
+        </p>
     </div>
 
     <div ng-if="daysData.extensionReasons.length">
-        <div ng-repeat="reason in daysData.extensionReasons track by $index">
-                <span ng-if="reason">
-                    <span>{{reason.description}}</span>
-                    <span>
-                        <input type="number" placeholder="%" min="1" max="100" required
-                               ng-model="daysData.extensionReasons[reason.id].percentage"
-                               ng-change="calculateReasonsDuration()">
-                    </span>
-                    <span ng-if="reason.duration">Duration: {{reason.duration}}</span>
-                    <span ng-if="!reason.duration">Duration: 0</span>
-                    <span><button ng-click="removeReason(reason)">Remove</button></span>
+        <p ng-repeat="reason in daysData.extensionReasons track by $index" ng-if="reason">
+            <span class="bold separated">{{reason.description}}</span>
+                <span>
+                    <input class="bold bigger separated" type="number" placeholder="%" min="1" max="100" required
+                           ng-model="daysData.extensionReasons[reason.id].percentage"
+                           ng-change="calculateReasonsDuration()">
                 </span>
-        </div>
+            <span>Duration</span>
+            <span class="bold bigger">
+                <span ng-if="reason.duration">{{reason.duration}}</span>
+                <span ng-if="!reason.duration">0</span>
+            </span>
+            <span>days</span>
+            <button class="button-medium" ng-click="removeReason(reason)">Remove</button>
+        </p>
     </div>
 
     <div>
         <span>Extension duration</span>
-        <input type="number" placeholder="days" min="1" required
+        <input class="bold bigger" type="number" placeholder="days" min="1" required
                ng-model="daysData.extensionDuration"
                ng-change="calculateReasonsDuration()">
-    </div>
-
-    <div ng-if="daysData.extensionDuration && daysData.canExtend">
-        <button ng-click="extendPlan(daysData.extensionDuration)">Confirm</button>
+        <span ng-if="daysData.extensionDuration && daysData.canExtend">
+            <button class="button-medium" ng-click="extendPlan(daysData.extensionDuration)">Confirm</button>
+        </span>
     </div>
 </form>
