--- a/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/daysAllocationPage/projectDays.html
+++ b/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/daysAllocationPage/projectDays.html
@@ -1,6 +1,6 @@
 <nav project-menu class="header-project-menu"></nav>
 
-<div ng-show="data.loaded">
+<div class="days-allocation-page-container clearfix" ng-show="data.loaded">
     <header class="page-title">
         <h3>Days allocation for project &quot;{{data.project.name}}&quot;</h3>
     </header>
@@ -10,8 +10,6 @@
     <plan-extension></plan-extension>
 
     <park-form></park-form>
-
-    <hr>
 
     <config-override></config-override>
 </div>
