--- a/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/projectMenu.html
+++ b/UAT/KPI-Dashboard/Kpi-Reporting-App/templates/projectMenu.html
@@ -1,7 +1,7 @@
 <ul class="list">
-    <li class="item"><a class="link" ng-href="#/projects/{{data.project.id}}/statistics">statistics</a></li>
-    <li class="item"><a class="link" ng-href="#/projects/{{data.project.id}}/allocationMap">allocation map</a></li>
-    <li class="item"><a class="link" ng-href="#/projects/{{data.project.id}}/daysAllocation">days allocation</a></li>
-    <li class="item"><a class="link" ng-href="#/projects/{{data.project.id}}/setup">setup</a></li>
-    <li class="item" ng-if="authentication.isAdmin()"><a class="link" ng-href="#/users/load">users load</a></li>
+    <li class="item "><a class="button-big" ng-href="#/projects/{{data.project.id}}/statistics">Statistics</a></li>
+    <li class="item"><a class="button-big" ng-href="#/projects/{{data.project.id}}/allocationMap">Allocation Map</a></li>
+    <li class="item"><a class="button-big" ng-href="#/projects/{{data.project.id}}/daysAllocation">Days Allocation</a></li>
+    <li class="item"><a class="button-big" ng-href="#/projects/{{data.project.id}}/setup">Setup</a></li>
+    <li class="item" ng-if="authentication.isAdmin()"><a class="button-big" ng-href="#/users/load">Users Load</a></li>
 </ul>
